Extract parsing counters and raytracing info out into a testable library.
We already had getCounters() code replicated, and will reuse it again as we implement more Android 17 checks.

Adds tests and addresses a number of code clarity / style issues.

We'll also consider moving render stages extraction out into ProfilingDataUtils, too, when we add further checks for them.

Test: atest hostsidetests/graphics/gpuprofiling [A]
Flag: EXEMPT TEST_ONLY
Bug: 448868135
Change-Id: Ifacb76e95589d7032b1bf204385242b5a6ba1e9e